--- a/Osa4/Back/package.json
+++ b/Osa4/Back/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
+    "test": "jest --verbose"
   },
   "author": "jussikai",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
@@ -17,5 +19,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
