--- a/Osa4/Back/.env
+++ b/Osa4/Back/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://FullStackOpenUser:Penislintuonkakka@cluster0-rwwir.mongodb.net/test?retryWrites=true&w=majority
 PORT=3003
+TEST_MONGODB_URI=mongodb+srv://FullStackOpenUser:Penislintuonkakka@cluster0-rwwir.mongodb.net/test?retryWrites=true&w=majority
