--- a/Osa7/bloglist-frontend-laajennettu/package.json
+++ b/Osa7/bloglist-frontend-laajennettu/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "eslint": "^6.8.0",
     "package.json": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.2"
