--- a/Osa8/library-frontend/package.json
+++ b/Osa8/library-frontend/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.4.3",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-ws": "^1.0.19",
     "graphql": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.8.6",
     "react-apollo": "^3.0.0-beta.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
